# ESP32

./: .gitignore  README.md
Zephyr-code/hello_world/: CMakeLists.txt
Zephyr-code/hello_world/src/: main.c
